--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
   },
   "homepage": "https://github.com/vusion/Vukoa-bodyParsePath#readme",
   "dependencies": {
-    "is-type-of": "^1.2.0"
+    "co-body": "^5.1.1",
+    "copy-to": "^2.0.1",
+    "extend-shallow": "^3.0.2",
+    "formidable": "^1.1.1",
+    "is-type-of": "^1.2.0",
+    "koa": "^2.4.1"
   }
 }
