--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "process request format for vukoa",
   "main": "index.js",
   "scripts": {
-    "test": "npm run lint -- --fix && npm run "
+    "test": "node test/exampleTest.js  "
   },
   "repository": {
     "type": "git",
